CSS Marker alignment issue fixed

--- a/runtime/styles/index.css
+++ b/runtime/styles/index.css
@@ -88,6 +88,7 @@
     display: block;
     margin-left: -2px !important;
     width: 35px;
+    text-align:center;
 }
 
 .leaflet-top,
