--- a/src/smart-map.css
+++ b/src/smart-map.css
@@ -86,6 +86,7 @@
     display: block;
     margin-left: -2px !important;
     width: 35px;
+    text-align:center;
 }
 
 .leaflet-top,
